test/conformance/chainsaw/generate/validation/policy/use-generate-existing-on-policy-update/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: generate-policy
  namespace: default
spec:
  generateExistingOnPolicyUpdate: true
  rules:
  - name: generate-rule
    match:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              color: blue
    generate:
      kind: NetworkPolicy
      apiVersion: networking.k8s.io/v1
      name: default-deny
      namespace: "{{request.object.metadata.name}}"
      synchronize: true
      data:
        metadata:
          labels:
            created-by: kyverno
        spec:
          podSelector: {}
          policyTypes:
          - Ingress
          - Egress
